@@ -1,3 +1,9 @@
+globus-ftp-client (8.25-1+gt6.@distro@) @distro@; urgency=low
+
+  * GT-604: fix ipv6 negotiation when source does not pre-connect
+
+ -- Globus Toolkit <support@globus.org>  Fri, 23 Oct 2015 15:48:42 -0500
+
 globus-ftp-client (8.24-1+gt6.@distro@) @distro@; urgency=low
 
   * use SIGINT to terminating test server for gcov
